<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">


    <LinearLayout
        android:id="@+id/kindnessLayout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/optimismLayout">

        <Switch
            android:id="@+id/kindnessSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:trackTint="#E60621"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/kindness" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/optimismLayout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/kindnessLayout"
        app:layout_constraintStart_toEndOf="@+id/happinessLayout"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/optimismSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:trackTint="#E60621"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/optimismTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/optimism" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/respectLayout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/egoLayout"
        app:layout_constraintStart_toEndOf="@+id/givigLayout"
        app:layout_constraintTop_toBottomOf="@+id/optimismLayout">

        <Switch
            android:id="@+id/respectSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:trackTint="#E60621"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/respectTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/respect" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/givigLayout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/respectLayout">

        <Switch
            android:id="@+id/givingSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:trackTint="#E60621"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/givingTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/giving" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/egoLayout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/respectLayout">

        <Switch
            android:id="@+id/egoSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:trackTint="#E60621"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/egotextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ego" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/happinessLayout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/optimismLayout">

        <Switch
            android:id="@+id/happinessSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:trackTint="#E60621"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/happinessTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/happiness" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>